fix: remove bonsai when screen is too small.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,10 +2,6 @@ body {
   font-family: sans-serif;
   font-size: 1.2rem;
   background-color: var(--bkg-color);
-  background-image: url("/img/bonsai.webp");
-  background-repeat: no-repeat;
-  background-position: right bottom;
-  background-attachment: fixed;
 }
 
 h1, h2, h3, h4, h5, h6, p, li {
@@ -185,6 +181,12 @@ pre {
           'header header header header'
           'left-sidebar main-content main-content right-sidebar'
           'footer footer footer footer';
+  }
+  body {
+    background-image: url("/img/bonsai.webp");
+    background-repeat: no-repeat;
+    background-position: right bottom;
+    background-attachment: fixed;
   }
 }
 
